website pushed with dummy data

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                         <h3>Strategic Management</h3>
                         <div class="workshop-instructor">
                             <i class="fas fa-user-tie"></i>
-                            <span>Dr. Rajesh Sharma</span>
+                            <span>Faculty Name</span>
                         </div>
                         <p>Master the art of strategic thinking and long-term planning for business success.</p>
                     </div>
@@ -291,7 +291,7 @@
                         <h3>Data-Driven Decision Making</h3>
                         <div class="workshop-instructor">
                             <i class="fas fa-user-graduate"></i>
-                            <span>Prof. Priya Mehta</span>
+                            <span>Faculty Name</span>
                         </div>
                         <p>Learn to leverage data for informed decision-making and business intelligence.</p>
                     </div>
@@ -317,7 +317,7 @@
                         <h3>Team Leadership</h3>
                         <div class="workshop-instructor">
                             <i class="fas fa-user-shield"></i>
-                            <span>Ms. Anita Singh</span>
+                            <span>Faculty Name</span>
                         </div>
                         <p>Develop essential leadership skills for managing and inspiring teams effectively.</p>
                     </div>
