website still has dummy data, register button enabled

--- a/forms.html
+++ b/forms.html
@@ -30,7 +30,7 @@
     <p class="section-subtitle text-center">Browse events by day and register</p>
 
     <!-- Day 1 -->
-    <h2 class="day-title">Day 1 - March 15, 2025</h2>
+    <h2 class="day-title">Day 1 - Date</h2>
     <div class="table-wrapper">
       <table class="event-table">
         <thead>
@@ -65,7 +65,7 @@
     </div>
 
     <!-- Day 2 -->
-    <h2 class="day-title">Day 2 - March 16, 2025</h2>
+    <h2 class="day-title">Day 2 - Date</h2>
     <div class="table-wrapper">
       <table class="event-table">
         <thead>
@@ -100,7 +100,7 @@
     </div>
 
     <!-- Day 3 -->
-    <h2 class="day-title">Day 3 - March 17, 2025</h2>
+    <h2 class="day-title">Day 3 - Date</h2>
     <div class="table-wrapper">
       <table class="event-table">
         <thead>
