--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                     <div class="timeline-content">
                         <div class="timeline-header">
                             <h3>Day 1 - Grand Opening</h3>
-                            <span class="timeline-date">March 15, 2025</span>
+                            <span class="timeline-date">Date</span>
                         </div>
                         <p>Kick-off with keynote speech and cultural performances.</p>
                         <ul class="timeline-activities">
@@ -441,7 +441,7 @@
                     <div class="timeline-content">
                         <div class="timeline-header">
                             <h3>Day 2 - Knowledge Sessions</h3>
-                            <span class="timeline-date">March 16, 2025</span>
+                            <span class="timeline-date">Date</span>
                         </div>
                         <p>Interactive learning sessions with industry experts.</p>
                         <ul class="timeline-activities">
@@ -459,7 +459,7 @@
                     <div class="timeline-content">
                         <div class="timeline-header">
                             <h3>Day 3 - Competitions</h3>
-                            <span class="timeline-date">March 17, 2025</span>
+                            <span class="timeline-date">Date</span>
                         </div>
                         <p>Management challenges, hackathons, and fun contests.</p>
                         <ul class="timeline-activities">
@@ -477,7 +477,7 @@
                     <div class="timeline-content">
                         <div class="timeline-header">
                             <h3>Closing - Awards Ceremony</h3>
-                            <span class="timeline-date">March 18, 2025</span>
+                            <span class="timeline-date">Date 1 </span>
                         </div>
                         <p>Winners announced and valedictory ceremony.</p>
                         <ul class="timeline-activities">
@@ -524,7 +524,7 @@
                         <i class="fas fa-user-plus"></i>
                         Register Now
                     </button>
-                    <p class="cta-note">Limited seats available. Register before March 1st to get early bird discount!</p>
+                    <p class="cta-note">Limited seats available. Register before September 1st to get early bird discount!</p>
                 </div>
                  -->
             </div>
