website still has dummy data, register button enabled

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <i class="fas fa-chart-line"></i>
-                <span>TARANG 2025</span>
+                <span>TARANG 2025 - Test Website</span>
             </div>
             
             <div class="nav-menu" id="nav-menu">
