website still has dummy data, register button enabled

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="draft-banner">
+  🚧 This is a draft version – work in progress 🚧
+</div>
   <!-- Particle effects for background -->
   <!-- Particle Background -->
   <div class="particles-container">
