--- a/index.html
+++ b/index.html
@@ -101,17 +101,17 @@
             
             <div class="hero-stats">
                 <div class="stat-item">
-                    <div class="stat-number" data-target="500">0</div>
+                    <div class="stat-number" data-target="-">0</div>
                     <div class="stat-label">Participants</div>
                     <i class="fas fa-users stat-icon"></i>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number" data-target="25">0</div>
+                    <div class="stat-number" data-target="-">0</div>
                     <div class="stat-label">Speakers</div>
                     <i class="fas fa-microphone-alt stat-icon"></i>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number" data-target="15">0</div>
+                    <div class="stat-number" data-target="-">0</div>
                     <div class="stat-label">Sessions</div>
                     <i class="fas fa-calendar-check stat-icon"></i>
                 </div>
@@ -196,7 +196,7 @@
                         <i class="fas fa-brain"></i>
                     </div>
                     <div class="event-content">
-                        <h3>Business Case Study Competition</h3>
+                        <h3>Event 1</h3>
                         <p>Solve real-world business challenges and showcase your analytical skills in this intensive competition.</p>
                         <div class="event-tags">
                             <span class="tag">Team Event</span>
@@ -213,7 +213,7 @@
                         <i class="fas fa-users"></i>
                     </div>
                     <div class="event-content">
-                        <h3>Leadership Summit</h3>
+                        <h3>Event 2</h3>
                         <p>Learn from industry leaders and gain insights into effective leadership strategies for the modern world.</p>
                         <div class="event-tags">
                             <span class="tag">2 Days</span>
@@ -230,7 +230,7 @@
                         <i class="fas fa-flask"></i>
                     </div>
                     <div class="event-content">
-                        <h3>Innovation Lab</h3>
+                        <h3>Event 3</h3>
                         <p>Hands-on innovation training that will transform your approach to problem-solving and creativity.</p>
                         <div class="event-tags">
                             <span class="tag">Interactive</span>
@@ -265,7 +265,7 @@
                         </div>
                     </div>
                     <div class="workshop-content">
-                        <h3>Strategic Management</h3>
+                        <h3>Workshop 1</h3>
                         <div class="workshop-instructor">
                             <i class="fas fa-user-tie"></i>
                             <span>Faculty Name</span>
@@ -291,7 +291,7 @@
                         </div>
                     </div>
                     <div class="workshop-content">
-                        <h3>Data-Driven Decision Making</h3>
+                        <h3>Workshop 2</h3>
                         <div class="workshop-instructor">
                             <i class="fas fa-user-graduate"></i>
                             <span>Faculty Name</span>
@@ -317,7 +317,7 @@
                         </div>
                     </div>
                     <div class="workshop-content">
-                        <h3>Team Leadership</h3>
+                        <h3>Workshop 3</h3>
                         <div class="workshop-instructor">
                             <i class="fas fa-user-shield"></i>
                             <span>Faculty Name</span>
