--- a/index.html
+++ b/index.html
@@ -223,10 +223,10 @@ From automated trading to AI-powered portfolio insights, discover how technology
                             <span class="tag tag--warning">Premium</span>
                         </div>
                     </div>
-                    <!-- 
+                    
                     <div class="event-action">
                         <button class="btn btn--outline btn--sm">Learn More</button>
-                    </div>-->
+                    </div>
                 </div>
                 
                 <div class="event-card" data-aos="slide-left" data-aos-delay="200">
